k8s/base/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: bookstore
  labels:
    app: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: redis
