k8s/base/networkpolicy-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-allow-backend-only
  labels:
    app: bookstore-db
spec:
  podSelector:
    matchLabels:
      app: bookstore-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: bookstore-backend
      ports:
        - protocol: TCP
          port: 5432
